/*!
 * https://github.com/SamsungDForum/FFmpegPlayer
 * Copyright 2020, Samsung Electronics Co., Ltd
 * Licensed under the MIT license
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

using System;
using System.Threading.Tasks;
using Demuxer.Common;
using FFmpegPlayer.Common;
using FFmpegPlayer.DataProviders;

namespace FFmpegPlayer.DataReaders
{
    public enum PresentPacketResult
    {
        Success,
        Retry,
        Fail
    }

    public delegate PresentPacketResult PresentPacketDelegate(Packet packet);

    public abstract class DataReader : IDisposable
    {
        public static FactoryDelegate<DataReader> CreateFactoryFor<TDataReader>() where TDataReader : DataReader, new()
        {
            return CreateInstance;

            TDataReader CreateInstance()
            {
                return new TDataReader();
            }
        }

        public abstract DataReader With(DataProvider dataProvider, PresentPacketDelegate presentPacket);
        public abstract DataReader AddHandler(ErrorDelegate errorHandler);
        public abstract void Dispose();
        public abstract Task DisposeAsync();
    }
}
